# ft_printf

./: CMakeLists.txt  Makefile  README.md  a.out  check_arg.c  file.c  flag_war.c  free_memory.c  ft_atoif.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_strlcpy.c  get_arguments.c  itoa_functions.c  memsetting.c  parser.c  print.c  print_pointer.c  print_processing.c  ptr_init.c  str_functions.c  string_print.c  string_print_work.c  value_print.c  value_print1.c  value_print2.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
